--- a/DoAnCNPM_Frontend/web/index.html
+++ b/DoAnCNPM_Frontend/web/index.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FoodFast Web</title>
+
+    <!-- ✅ Thêm Font Awesome để dùng icon -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    />
   </head>
+
   <body class="bg-gray-100">
     <div id="root"></div>
     <script type="module" src="/src/index.jsx"></script>
