--- a/DoAnCNPM_Frontend/web/index.html
+++ b/DoAnCNPM_Frontend/web/index.html
@@ -3,13 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FoodFast Web</title>
+    <title>HuongVyFood</title>
 
-    <!-- ✅ Thêm Font Awesome để dùng icon -->
+    <!-- Font Awesome -->
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
+
+    <!-- Tailwind -->
+    <link rel="stylesheet" href="/src/index.css" />
   </head>
 
   <body class="bg-gray-100">
